feat: add Typewriter component for animated text display
Adds animated text and portfolio section to homepage

Introduces a typewriter-style animated text for the hero description to improve visual appeal. Adds a new portfolio section with project data, multilingual support, and navigation integration, allowing users to view detailed project info. Enhances skill icons with animation for a more engaging experience.

--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -1,7 +1,7 @@
 {
   "hero.name": "Fərmayıl",
   "hero.surname": "Həsənov",
-  "hero.description": "Performans, dizayn və təmiz kod üzərində fokuslanan Front-End Developer",
+  "hero.description": "Performans, dizayn və təmiz kod üzərində fokuslanan Front-End Developer. ",
   "about.title": "Haqqımda",
   "about.description": "Detallara diqqətli və özünü inkişaf etdirməyə həvəsli Front-End Developer olaraq React, TypeScript, Tailwind CSS və müasir UI kitabxanaları ilə miqyaslana bilən və istifadəyə rahat veb tətbiqlər hazırlayıram. Təmiz və performanslı kod yazmağa, dizaynların funksional interfeyslərə çevrilməsinə və API inteqrasiyalarına xüsusi önəm verirəm. Komanda ilə işləməyi və daim yeni texnologiyalar öyrənməyi sevirəm.",
   "personalInfo": {
@@ -26,6 +26,7 @@
   "navbar": {
     "about": "Haqqımda",
     "skill": "Bacarıqlar",
+    "portfolio": "Portfolio",
     "contact": "Əlaqə",
     "resume": "CV"
   }
