feat: add EmailJS integration for contact form and update translations

--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -22,7 +22,7 @@
   "skills.title": "Bacarıqlar",
   "contact.title": "Əlaqə",
   "contact.description": "Yeni layihə, əməkdaşlıq və ya texniki dəstək üçün mənimlə əlaqə saxlaya bilərsiniz. Mesajlarınıza tez bir zamanda cavab verməyə çalışıram.",
-  "contact.button": "Gmaildən yaz",
+  "contact.button": "Göndər",
   "navbar": {
     "about": "Haqqımda",
     "skill": "Bacarıqlar",
