--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,7 +22,7 @@
     "skills.title": "Skills",
     "contact.title": "Contact",
     "contact.description": "Whether it’s a new project, collaboration opportunity, or a technical question — feel free to reach out. I aim to respond as promptly as possible.",
-    "contact.button": "Contact me with gmail",
+    "contact.button": "Send",
     "navbar": {
         "about": "About",
         "skill": "Skills",
